# HttPauvre

./: .env  Cargo.toml  README.md  config.toml  todo.md
src/: config.rs  main.rs  request.rs  response.rs  server.rs  status.rs
src/request/: method.rs  mod.rs  request.rs
src/response/: file.rs  mod.rs  response.rs
www/: index.html  test.txt
