[package]
name = "httpauvre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
